[gd_scene load_steps=10 format=2]

[ext_resource path="res://models/MeshLibrary.tres" type="MeshLibrary" id=1]
[ext_resource path="res://scenes/World.gd" type="Script" id=2]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 6, 2, 20 )

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.5, 0.5, 0.5, 1 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 3, 1, 10 )

[sub_resource type="CapsuleMesh" id=4]
radius = 0.5

[sub_resource type="CapsuleShape" id=5]
radius = 0.5

[sub_resource type="CapsuleShape" id=6]

[sub_resource type="CapsuleMesh" id=7]

[node name="World" type="Spatial"]
script = ExtResource( 2 )

[node name="GridMap" type="GridMap" parent="."]
mesh_library = ExtResource( 1 )
cell_size = Vector3( 1, 1, 1 )
cell_center_x = false
cell_center_y = false
cell_center_z = false
data = {
"cells": PoolIntArray( 0, 0, 1048646, 1, 0, 1048645, 2, 0, 1441799, 3, 0, 1048646, 65532, 0, 1048646, 65533, 0, 1048646, 65534, 0, 1048611, 65535, 0, 1048645, 0, 1, 1048646, 1, 1, 1048645, 2, 1, 1048646, 3, 1, 1048646, 65532, 1, 1048646, 65533, 1, 1048646, 65534, 1, 1048646, 65535, 1, 1048645, 0, 2, 1048646, 1, 2, 1048645, 2, 2, 1441799, 3, 2, 1048646, 65532, 2, 1048646, 65533, 2, 1048646, 65534, 2, 1048611, 65535, 2, 1048645, 0, 3, 1048646, 1, 3, 1048645, 2, 3, 1048646, 3, 3, 1048646, 65532, 3, 1048646, 65533, 3, 1048646, 65534, 3, 1048646, 65535, 3, 1048645, 0, 4, 1048646, 1, 4, 1048645, 2, 4, 1441799, 3, 4, 1048646, 65532, 4, 1048646, 65533, 4, 1048646, 65534, 4, 1048611, 65535, 4, 1048645, 0, 5, 1048646, 1, 5, 1048645, 2, 5, 1048646, 3, 5, 1048646, 65532, 5, 1048646, 65533, 5, 1048646, 65534, 5, 1048646, 65535, 5, 1048645, 0, 6, 1048646, 1, 6, 1048645, 2, 6, 1441799, 3, 6, 1048646, 65532, 6, 1048646, 65533, 6, 1048646, 65534, 6, 1048611, 65535, 6, 1048645, 0, 7, 1048646, 1, 7, 1048645, 2, 7, 1048646, 3, 7, 1048646, 65532, 7, 1048646, 65533, 7, 1048646, 65534, 7, 1048646, 65535, 7, 1048645, 0, 8, 1048646, 1, 8, 1048645, 2, 8, 1441799, 3, 8, 1048646, 65532, 8, 1048646, 65533, 8, 1048646, 65534, 8, 1048611, 65535, 8, 1048645, 0, 9, 1048646, 1, 9, 1048645, 2, 9, 1048646, 3, 9, 1048646, 65532, 9, 1048646, 65533, 9, 1048646, 65534, 9, 1048646, 65535, 9, 1048645, 0, 10, 1048646, 1, 10, 1048645, 2, 10, 1441799, 3, 10, 1048646, 65532, 10, 1048646, 65533, 10, 1048646, 65534, 10, 1048611, 65535, 10, 1048645, 0, 65526, 1048646, 1, 65526, 1048645, 2, 65526, 1441799, 3, 65526, 1048646, 65532, 65526, 1048646, 65533, 65526, 1048646, 65534, 65526, 1048611, 65535, 65526, 1048645, 0, 65527, 1048646, 1, 65527, 1048645, 2, 65527, 1048646, 3, 65527, 1048646, 65532, 65527, 1048646, 65533, 65527, 1048646, 65534, 65527, 1048646, 65535, 65527, 1048645, 0, 65528, 1048646, 1, 65528, 1048645, 2, 65528, 1441799, 3, 65528, 1048646, 65532, 65528, 1048646, 65533, 65528, 1048646, 65534, 65528, 1048611, 65535, 65528, 1048645, 0, 65529, 1048646, 1, 65529, 1048645, 2, 65529, 1048646, 3, 65529, 1048646, 65532, 65529, 1048646, 65533, 65529, 1048646, 65534, 65529, 1048646, 65535, 65529, 1048645, 0, 65530, 1048646, 1, 65530, 1048645, 2, 65530, 1441799, 3, 65530, 1048646, 65532, 65530, 1048646, 65533, 65530, 1048646, 65534, 65530, 1048611, 65535, 65530, 1048645, 0, 65531, 1048646, 1, 65531, 1048645, 2, 65531, 1048646, 3, 65531, 1048646, 65532, 65531, 1048646, 65533, 65531, 1048646, 65534, 65531, 1048646, 65535, 65531, 1048645, 0, 65532, 1048646, 1, 65532, 1048645, 2, 65532, 1441799, 3, 65532, 1048646, 65532, 65532, 1048646, 65533, 65532, 1048646, 65534, 65532, 1048611, 65535, 65532, 1048645, 0, 65533, 1048646, 1, 65533, 1048645, 2, 65533, 1048646, 3, 65533, 1048646, 65532, 65533, 1048646, 65533, 65533, 1048646, 65534, 65533, 1048646, 65535, 65533, 1048645, 0, 65534, 1048646, 1, 65534, 1048645, 2, 65534, 1441799, 3, 65534, 1048646, 65532, 65534, 1048646, 65533, 65534, 1048646, 65534, 65534, 1048611, 65535, 65534, 1048645, 0, 65535, 1048646, 1, 65535, 1048645, 2, 65535, 1048646, 3, 65535, 1048646, 65532, 65535, 1048646, 65533, 65535, 1048646, 65534, 65535, 1048646, 65535, 65535, 1048645 )
}
__meta__ = {
"_editor_clip_": 0
}

[node name="Ground" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )

[node name="GroundMesh" type="MeshInstance" parent="Ground"]
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="Ground"]
shape = SubResource( 3 )

[node name="Player" type="KinematicBody" parent="."]

[node name="PlayerMesh" type="MeshInstance" parent="Player"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1, 0 )
mesh = SubResource( 4 )
material/0 = null

[node name="PlayerCollision" type="CollisionShape" parent="Player"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1, 0 )
shape = SubResource( 5 )

[node name="CamBase" type="Spatial" parent="."]

[node name="CamPivot" type="Spatial" parent="CamBase"]
transform = Transform( 0.866025, -0.5, 0, 0.5, 0.866025, 0, 0, 0, 1, 0, 0, 0 )

[node name="Camera" type="Camera" parent="CamBase/CamPivot"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 8, 0, 0 )

[node name="Hunter" type="KinematicBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 4, 10 )

[node name="HunterCollision" type="CollisionShape" parent="Hunter"]
shape = SubResource( 6 )

[node name="HunterMesh" type="MeshInstance" parent="Hunter"]
mesh = SubResource( 7 )
material/0 = null

[node name="HunterThink" type="Timer" parent="Hunter"]

[connection signal="timeout" from="Hunter/HunterThink" to="." method="_on_HunterThink_timeout"]
